Fix overlapping award text on mobile

--- a/styles.css
+++ b/styles.css
@@ -820,7 +820,7 @@ p {
   }
   
   .award h2 {
-  	margin-top: -32px;
+  	margin-top: -12px;
   }
 
   .articlequote {
